--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/image.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Erik-FL desenvolvedor full stack javascript" />
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="black">
+    <meta name="author" content="Erik-FL" />
+    <meta name="keywords" content="Erik-FL, desenvolvedor, full stack, javascript, react, node, express, mongodb" />
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
     <title>Erik-FL</title>
   </head>
   <body>
