--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/image.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Erik-FL desenvolvedor full stack javascript" />
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
-    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="black">
+    <meta name="theme-color" content="#1E1E1F" />
+    <meta name="msapplication-navbutton-color" content="#1E1E1F" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#1E1E1F" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="author" content="Erik-FL" />
     <meta name="keywords" content="Erik-FL, desenvolvedor, full stack, javascript, react, node, express, mongodb" />
     <meta name="robots" content="index, follow" />
