--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/image.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Erik-FL desenvolvedor full stack javascript" />
+    <meta name="description" content="Erik Ferreira Lima desenvolvedor full stack javascript, trabalha com React.js e React Native, node.js, typescript" />
     <meta name="theme-color" content="#1E1E1F" />
-    <meta name="msapplication-navbutton-color" content="#1E1E1F" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#1E1E1F" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Erik-FL" />
+    <meta name="application-name" content="Erik-FL" />
+    <meta name="msapplication-TileColor" content="#1E1E1F" />
+    <meta name="msapplication-TileImage" content="/image.svg" />
+    <meta name="keywords" content="Erik-FL, desenvolvedor, full stack, javascript, react, node, express, mongodb, React.js, React Native, node.js, typescript, Erik, Erik Ferreira, Erik Ferreira Lima, Erik Lima, programador" />
     <meta name="author" content="Erik-FL" />
-    <meta name="keywords" content="Erik-FL, desenvolvedor, full stack, javascript, react, node, express, mongodb" />
+    <meta name="language" content="pt-br" />
     <meta name="robots" content="index, follow" />
-    <meta name="googlebot" content="index, follow" />
     <title>Erik-FL</title>
   </head>
   <body>
