feat: Fix: PWD, SEO
improve PWD points

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" manifest="/manifest.json">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/image.svg" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/image.svg" />
+    <link rel="mask-icon" href="/image.svg" color="#1E1E1F" />
+    <link rel="shortcut icon" href="/image.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Erik Ferreira Lima desenvolvedor full stack javascript, trabalha com React.js e React Native, node.js, typescript" />
     <meta name="theme-color" content="#1E1E1F" />
@@ -18,6 +21,8 @@
     <meta name="author" content="Erik-FL" />
     <meta name="language" content="pt-br" />
     <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="google-site-verification" content="google-site-verification" />
     <title>Erik-FL</title>
   </head>
   <body>
