fix: :zap: Fix manifexto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" manifest="/manifest.json">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/image.svg" />
+    <link rel="icon" type="image/svg+xml" href="/image-512x512.svg" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/image.svg" />
     <link rel="mask-icon" href="/image.svg" color="#1E1E1F" />
