feat: :zap: Improve PWA

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="pt-br" manifest="/manifest.json">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/image-512x512.svg" />
+    <link rel="icon" type="image/svg+xml" href="/image-512x512.ico" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/image.svg" />
-    <link rel="mask-icon" href="/image.svg" color="#1E1E1F" />
-    <link rel="shortcut icon" href="/image.svg" />
+    <link rel="apple-touch-icon" href="/image-512x512.ico" />
+    <link rel="mask-icon" href="/image-512x512.ico" color="#1E1E1F" />
+    <link rel="shortcut icon" href="/image-512x512.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Erik-FL" />
     <meta name="description" content="Erik Ferreira Lima desenvolvedor full stack javascript, trabalha com React.js e React Native, node.js, typescript" />
+    <meta name="image" content="/image-512x512.ico" />
+    <meta property="og:type" content="website" />
     <meta name="theme-color" content="#1E1E1F" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
